[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.2", features = ["macros", "http2", "ws"] }
futures = "0.3.29"
futures-util = { version = "0.3.29", features = ["io"] }
log = "0.4.20"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.6.1", features = ["rand", "serde", "fast-rng", "v4"] }
